[tool.poetry]
name = "repl-nix-llamaoptimizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
transformers = "^4.44.2"
gradio = "^4.43.0"
accelerate = "^0.34.2"
bitsandbytes = "^0.43.3"
tqdm = "^4.66.5"
datasets = "^2.21.0"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
