[tool.poetry]
name = "repl-nix-llamaoptimizer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.1.0"
transformers = "4.33.2"
gradio = "3.44.4"
accelerate = "^0.34.2"
bitsandbytes = "^0.43.3"
tqdm = "4.66.1"
datasets = "2.14.5"
scikit-learn = "1.3.1"
numpy = "1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
